--- a/css/contact.css
+++ b/css/contact.css
@@ -72,3 +72,15 @@
     text-align: center;
     cursor: pointer;
 }
+
+@media screen and (max-width: 1000px) {
+    .main-content {
+        padding-top: 40px;
+        flex-direction: column;
+    }
+
+    .contact-form {
+        width: 60%;
+        margin: 0;
+    }
+}
